@@ -19,6 +19,10 @@ internal library size is now stored in kilobytes to avoid rounding errors
 
 endian checking was rewritten to be more portable
 
+changed user levels to leech, user, moderator, admin, elite
+
+added support for the wallop command (627)
+
 Changes from 0.07
 =================
 
